fixed blurring of canvas element on ipad

--- a/vc.css
+++ b/vc.css
@@ -1,6 +1,6 @@
 
 	
-	img {
+	img, canvas {
 		-ms-interpolation-mode: nearest-neighbor;
 		image-rendering: -webkit-optimize-contrast;
 		image-rendering: -moz-crisp-edges;
